# cpp-garbage-collector

src/: CMakeLists.txt
src/gc_library/: CMakeLists.txt  gc_library.hpp
